# py-rag-redis-llama

./: CMakeLists.txt  README.md  requirements.txt  setup.py
app/: bindings.cpp  load_data.py  main.py
